--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,10 +1,15 @@
 .App{
 
-    
+    display: flex;
+    justify-content: center;
 
 
     .container{
-
+            width: 1024px;
+            .link{
+                text-decoration: none;
+                color: inherit;
+            }
         .loginDiv{
             display: flex;
             flex-direction: column;
@@ -51,9 +56,59 @@
             }
         }
 
+        .navbar{
 
+            .container{
+                padding: 10px 0px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                .logo{
 
-        //register
+                    img{
+                        height: 3rem;
+                        width: 6rem;
+
+                    }
+
+                }
+                .links{
+                    display: flex;
+                    gap: 10px;
+                    align-items: center;
+
+                    span{
+                        font-weight: 600;
+                        font-size: 16px;
+                        cursor: pointer;
+                    }
+                    h4{
+                        font-weight: 100;
+                    }
+
+                 
+                    .write{
+                        background-color: turquoise;
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        
+
+                        &:hover{
+                            color: teal;
+                            background-color: white;
+                            border: 1px solid teal;
+                        }
+                    }
+
+                }
+
+            }
+
+        }
 
     }
 
