footer and design

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -109,6 +109,20 @@
             }
 
         }
+        footer{
+            margin-top: 100px;
+            padding: 20px;
+            background-color: turquoise;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 12px;
+
+            img{
+                height: 3rem;
+
+            }
+        }
 
     }
 
