--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -195,6 +195,67 @@
                 }
             }
         }
+        .single{
+            display: flex;
+            gap: 50px;
+
+            .content{
+                flex: 5;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                img{
+                    width: 100%;
+                    height: 300px;
+                    object-fit: cover;
+                }
+
+                .user{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    font-size: 14px;
+
+                    img{
+                        width: 60px;
+                        height: 60px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+                    .info{
+                        margin-top: 15px;
+                    }
+                    span{
+                        font-weight: bold;
+
+                    } 
+                    .edit{
+
+                    display: flex;
+                    gap: 5px;
+                    
+                    img{
+                        width: 20px;
+                        height: 20px;
+                        cursor: pointer;
+                    }
+
+                }
+                }
+                    h1{
+                        font-size: 42px;
+                        color: #333;
+                    }
+                    p{
+                        text-align: justify;
+                        line-height: 30px;
+                    }
+
+            }
+            .menu{
+                flex: 2;
+            }
+        }
 
     }
 
