--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -254,6 +254,46 @@
             }
             .menu{
                 flex: 2;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+
+                h1{
+                    font-size: 20px;
+                    color: #555;
+                }
+                .post{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    img{
+                        width: 100%;
+                        height: 200px;
+                        object-fit: cover;
+                    }
+                    h2{
+                        color: #555;
+                    }
+                    button{
+                        width: 100%;
+                        padding: 15px 7.5px;
+                        border: none;
+                        cursor: pointer;
+                        background-color: white;
+                        border: 1px solid teal;
+                        color: teal;
+
+                        &:hover{
+                            background-color: turquoise;
+                            border: 1px solid white;
+                           color: black;
+                        }
+
+                    }
+                    
+
+                }
             }
         }
 
