--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -340,6 +340,7 @@
                     justify-content:space-between;
                     font-size: 16px;
                     color: #555;
+                    gap: 10px;
 
 
                     h1{
