--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -16,7 +16,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: turquoise;
+            background-color: #89CFF0;
 
             h1{
                 font-size: 40px;
@@ -88,7 +88,7 @@
 
                  
                     .write{
-                        background-color: turquoise;
+                        background-color: #89CFF0;
                         width: 50px;
                         height: 50px;
                         border-radius: 50%;
@@ -112,7 +112,7 @@
         footer{
             margin-top: 100px;
             padding: 20px;
-            background-color: turquoise;
+            background-color: #89CFF0;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -147,7 +147,7 @@
                             content: "";
                             width: 100%;
                             height: 100%;
-                            background-color: turquoise;
+                            background-color: #89CFF0;
                             position: absolute;
                             top: 20px;
                             left: -20px;
@@ -185,7 +185,7 @@
                             color: teal;
 
                             &:hover{
-                                background-color: turquoise;
+                                background-color: #89CFF0;
                                 border: 1px solid white;
                                color: black;
                             }
@@ -285,7 +285,7 @@
                         color: teal;
 
                         &:hover{
-                            background-color: turquoise;
+                            background-color: #89CFF0;
                             border: 1px solid white;
                            color: black;
                         }
@@ -315,7 +315,7 @@
                     border: 1px solid lightgray;
                 }
                 .editorContainer{
-                    height: 300px;
+                    height: 450px;
                     overflow: scroll;
                     border: 1px solid lightgray;
 
